--- a/libnao/libnao.vcxproj
+++ b/libnao/libnao.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -269,6 +269,8 @@
     <ClCompile Include="src\Decoding\Archives\NaoDATReader.cpp" />
     <ClCompile Include="src\Decoding\Parsing\NaoUTFReader.cpp" />
     <ClCompile Include="src\Filesystem\NaoFileSystemManager.cpp" />
+    <ClCompile Include="src\Filesystem\NaoFileSystemManager_p.cpp" />
+    <ClCompile Include="src\Filesystem\NTreeNode.cpp" />
     <ClCompile Include="src\IO\NaoChunkIO.cpp" />
     <ClCompile Include="src\IO\NaoFileIO.cpp" />
     <ClCompile Include="src\IO\NaoIO.cpp" />
@@ -278,6 +280,7 @@
     <ClCompile Include="src\NaoObject.cpp" />
     <ClCompile Include="src\Plugin\NaoPlugin.cpp" />
     <ClCompile Include="src\Plugin\NaoPluginManager.cpp" />
+    <ClCompile Include="src\Plugin\NaoPluginManager_p.cpp" />
     <ClCompile Include="src\UI\NaoUIManager.cpp" />
     <ClCompile Include="src\UI\NaoWidget.cpp" />
     <ClCompile Include="src\UI\NProgressDialog.cpp" />
@@ -298,6 +301,7 @@
     <ClInclude Include="include\Filesystem\Filesystem.h" />
     <ClInclude Include="include\Filesystem\NaoFileSystemManager.h" />
     <ClInclude Include="include\Filesystem\NaoFileSystemManager_p.h" />
+    <ClInclude Include="include\Filesystem\NTreeNode.h" />
     <ClInclude Include="include\Functionality\NaoEndian.h" />
     <ClInclude Include="include\Functionality\NaoMath.h" />
     <ClInclude Include="include\IO\NaoChunkIO.h" />
@@ -309,6 +313,7 @@
     <ClInclude Include="include\NaoObject.h" />
     <ClInclude Include="include\Plugin\NaoPlugin.h" />
     <ClInclude Include="include\Plugin\NaoPluginManager.h" />
+    <ClInclude Include="include\Plugin\NaoPluginManager_p.h" />
     <ClInclude Include="include\UI\NaoUIManager.h" />
     <ClInclude Include="include\UI\NaoWidget.h" />
     <ClInclude Include="include\UI\NProgressDialog.h" />
